fix: remove data-anchor for first div element on mobile devices

--- a/src/components/Preview/Preview.module.scss
+++ b/src/components/Preview/Preview.module.scss
@@ -145,8 +145,9 @@
   animation: arrowAction 3s ease-in-out infinite;
   a {
     display: block;
-    padding: 20px;
+    padding: 30px;
     opacity: 0;
+    z-index: 1;
     svg {
       fill: $active;
       width: 40px;
@@ -184,7 +185,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-30px);
+    transform: translateY(-15px);
     opacity: 0.5;
   }
   100% {
@@ -197,7 +198,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-30px);
+    transform: translateY(-15px);
     opacity: 0.5;
   }
   100% {
